<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AmeacasAmbientaisActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descrição da Ameaça:"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtDescricaoAmeaca"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Endereço:"
        android:id="@+id/textView2"
        android:layout_below="@+id/txtDescricaoAmeaca"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtEndereco"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bairro"
        android:id="@+id/textView3"
        android:layout_below="@+id/txtEndereco"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtBairro"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Potencial da Ameaça"
        android:id="@+id/textView4"
        android:layout_below="@+id/txtBairro"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPotencialAmeaca"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listaAmeacas"
        android:layout_below="@+id/btAdicionar"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_adicionar"
        android:id="@+id/btAdicionar"
        android:onClick="addAmeaca"
        android:layout_below="@+id/txtPotencialAmeaca"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_listar"
        android:id="@+id/btListar"
        android:onClick="showAmeacas"
        android:layout_below="@+id/txtPotencialAmeaca"
        android:layout_toEndOf="@+id/btAdicionar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_listar_novo"
        android:id="@+id/btListarNovo"
        android:onClick="listaAmeacasNovo"
        android:layout_below="@+id/txtPotencialAmeaca"
        android:layout_alignBaseline="@+id/btListar"
        android:layout_alignBottom="@+id/btListar"
        android:layout_toEndOf="@+id/btListar" />

    <Button
        android:text="Car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPotencialAmeaca"
        android:layout_alignParentEnd="true"
        android:id="@+id/button"
        android:onClick="buscarParaServidor"/>

    <Button
        android:text="ENV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_above="@+id/button"
        android:layout_alignParentEnd="true"
        android:onClick="enviarParaServidor"/>

</RelativeLayout>
